# ros2-mission-2

./: .gitignore  README.md  fastrtps_profile.xml  requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mission/lib/mission/: bucket_valve  control  state  winch
install/mission/share/mission/: package.dsv  package.ps1  package.sh
install/mission_interfaces/share/mission_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mission_interfaces/share/mission_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  export_mission_interfaces__rosidl_generator_cExport-noconfig.cmake  export_mission_interfaces__rosidl_generator_cppExport.cmake  export_mission_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_mission_interfaces__rosidl_generator_pyExport.cmake  export_mission_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  (+6 more)
install/start_mission/share/start_mission/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/test_nodes/lib/test_nodes/: battery_monitor  pose_monitor  service_client  service_server
install/test_nodes/share/test_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
mission/: package.xml  setup.py
mission/install/: local_setup.sh  setup.sh  setup.zsh
mission/install/mission/lib/mission/: approach  vision
mission/install/mission/share/mission/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mission/log/: latest_build
mission/mission/: approach.py  cam2.py  cam_pub.py  canusb  cheatsheet.md  helper_func.py  machine_vision.py  manual_control.py  other_machine_vision.py  state_node.py  state_node_advanced.py  state_node_min.py  valve_bucket_control.py  valve_control.py  valve_source_control.py  water_measure.py  winch_control.py  yolo_detect.py
mission_interfaces/: CMakeLists.txt
mission_interfaces/msg/: ApproachInfo.msg
monitors/test_nodes/: battery_monitor.py  service_server.py
start_mission/: CMakeLists.txt
start_mission/launch/: start.launch.py
test_nodes/: setup.cfg  setup.py
test_nodes/test_nodes/: pose_monitor.py  service_client.py
(+31 files in other folders)
