<?xml version="1.0"?>
<package format="3">
  <name>mission_interfaces</name>
  <version>0.0.0</version>
  <description>Mission custom message interfaces</description>
  <maintainer email="colinc131@gmail.com">colin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation dependencies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>mission_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
