<?xml version="1.0"?>
<package format="3">
  <name>mission</name>
  <version>0.0.0</version>
  <description>Mission custom message interfaces</description>
  <maintainer email="colinc131@gmail.com">colin</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <depend>mission_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
